--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,4 +1,4 @@
-name: Build Chinese Sudoku APK
+name: Build Sudoku APK Pro
 
 on:
   push:
@@ -6,42 +6,27 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-apk:
-    runs-on: ubuntu-20.04
-    
+  build:
+    runs-on: ubuntu-latest
+
     steps:
     - name: 检出代码
-      uses: actions/checkout@v3
-    
-    - name: 设置 Python 3.9
-      uses: actions/setup-python@v4
+      uses: actions/checkout@v4
+
+    - name: 缓存 Buildozer 环境
+      uses: actions/cache@v3
       with:
-        python-version: '3.9'
-    
-    - name: 安装 Java JDK 17
-      uses: actions/setup-java@v3
+        path: .buildozer
+        key: ${{ runner.os }}-buildozer-${{ hashFiles('buildozer.spec') }}
+
+    - name: 使用专业版 Buildozer 构建
+      uses: ArtemSerebennikov/buildozer-action@v1
       with:
-        distribution: 'temurin'
-        java-version: '17'
-    
-    - name: 安装系统依赖
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y git zip unzip wget autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
-    
-    - name: 安装Python依赖
-      run: |
-        pip install --upgrade pip
-        pip install cython==0.29.33
-        pip install buildozer
-    
-    - name: 构建APK
-      run: |
-        buildozer android debug
-    
-    - name: 上传APK
+        buildozer_version: master
+        python_version: 3.9
+
+    - name: 上传构建产物
       uses: actions/upload-artifact@v3
       with:
-        name: Sudoku-Chinese-APK
+        name: Sudoku-3D-APK
         path: bin/*.apk
-        retention-days: 30
